fix img sizes and letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .neon-text {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgb(255, 255, 255);
   text-shadow: 0 0 10px rgba(255, 0, 149, 0.8), 0 0 20px rgba(255, 0, 150, 0.8), 0 0 30px rgba(255, 0, 150, 0.8);
 }
 
